--- a/homework.ipynb
+++ b/homework.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
         "id": "5yUvvDLwlSVb"
       },
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -182,7 +182,7 @@
               "0.24"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -213,13 +213,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p2 = sum(q2.values())/len(q2)"
+        "# average rating = expected value\n",
+        "# each value needs to be multiplied by its probability so 1 * 0.11, 2 * 0.18 etc.\n",
+        "p2 = sum(rating * prob for rating, prob in q2.items())"
       ]
     },
     {
@@ -231,16 +232,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.2"
+              "3.0799999999999996"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -262,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -402,7 +403,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -435,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -444,7 +445,7 @@
               "0.25"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -466,38 +467,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
         "# DO NOT CHANGE\n",
-        "\n",
+        "# every true = 0.9 so every false = 0.1\n",
         "q4 = [False, False, True, True, True, True, True, True, True, False]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p4 = ..."
+        "p4 = (0.9 ** 7) * (0.1 ** 3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "0.0004782969000000002"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -520,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -533,27 +533,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p5 = ..."
+        "p5 = sum(q5)/len(q5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "0.9"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -575,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -590,13 +590,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q6a = {1: 0.2, 2:0.1, 3: 0.3, 4: 0.01, 5:0.39}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p6 = ..."
+        "# Shannon Entropy formula\n",
+        "# I did this one out by hand first with the above formula H(x) = -(0.2log20.2 + 0.1log20.1 + 0.3log20.3 and so on.)\n",
+        "p6 = 1.953874"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# I had to look up the python code so I never have to do that again by hand\n",
+        "# because variables are strings... I have to either change them over to integers or\n",
+        "def shan_ent(probs):\n",
+        "    return -sum(p * math.log2(p) for \n",
+        "p in probs if p > 0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "-26.36452797660028"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "test = shan_ent(q6a)\n",
+        "test"
       ]
     },
     {
@@ -608,16 +652,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "1.953874"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -641,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -671,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -682,7 +726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -715,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -754,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -772,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -804,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -816,18 +860,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "q9() takes 0 positional arguments but 1 was given",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# YOUR CHANGES HERE\u001b[39;00m\n\u001b[32m      2\u001b[39m p9a = [\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m p9b = \u001b[43mq9\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp9a\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#p9 = np.quantile(q9, 25)\u001b[39;00m\n",
+            "\u001b[31mTypeError\u001b[39m: q9() takes 0 positional arguments but 1 was given"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p9 = ..."
+        "p9a = [0,1]\n",
+        "p9b = q9(p9a)\n",
+        "#p9 = np.quantile(q9, 25)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -836,7 +893,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -859,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -877,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -886,7 +943,7 @@
               "0.7"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -907,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -922,13 +979,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p11 = 8/10"
+        "p11 = 7/10"
       ]
     },
     {
@@ -940,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -949,7 +1006,7 @@
               "0.8"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -972,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1010,7 +1067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1021,7 +1078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1052,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1071,7 +1128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1080,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1089,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1098,7 +1155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1107,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1116,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1125,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1146,7 +1203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1176,7 +1233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1206,7 +1263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1224,7 +1281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1253,14 +1310,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "IndentationError",
+          "evalue": "unindent does not match any outer indentation level (<string>, line 6)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mFile \u001b[39m\u001b[32m<string>:6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31melse:\u001b[39m\n         ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unindent does not match any outer indentation level\n"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p15():\n",
-        "    ..."
+        "     if \n",
+        "        return 'You win!'\n",
+        "    else:\n",
+        "        return 'Sorry'"
       ]
     },
     {
@@ -1272,7 +1341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1312,7 +1381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1353,7 +1422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1371,7 +1440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1410,7 +1479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1421,7 +1490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1460,7 +1529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1471,7 +1540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1507,7 +1576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1519,7 +1588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1531,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1566,7 +1635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1578,7 +1647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1589,7 +1658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1600,7 +1669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
