--- a/homework.ipynb
+++ b/homework.ipynb
@@ -599,14 +599,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "# Shannon Entropy formula\n",
-        "# I did this one out by hand first with the above formula H(x) = -(0.2log20.2 + 0.1log20.1 + 0.3log20.3 and so on.)\n",
-        "p6 = 1.953874"
+        "# I did this one out by hand first with the above formula H(x) = -(0.2log20.2 + 0.1log20.1 + 0.3log20.3 and so on.)"
       ]
     },
     {
@@ -652,22 +651,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "1.953874"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "p6"
+        "p6 = test"
       ]
     },
     {
