--- a/homework.ipynb
+++ b/homework.ipynb
@@ -507,6 +507,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.9801000000000001"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ch4 = (0.01 * 1)* (0.99 * 99)\n",
+        "ch4"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RpywPjcnIhgt"
@@ -590,56 +611,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [],
       "source": [
-        "q6a = {1: 0.2, 2:0.1, 3: 0.3, 4: 0.01, 5:0.39}"
+        "q6a = {1: 0.2, 2: 0.1, 3: 0.3, 4: 0.01, 5: 0.39}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "# Shannon Entropy formula\n",
-        "# I did this one out by hand first with the above formula H(x) = -(0.2log20.2 + 0.1log20.1 + 0.3log20.3 and so on.)"
+        "# I did this one out by hand first with the above formula H(x) = -(0.2log20.2 + 0.1log20.1 + 0.3log20.3 and so on.)\n",
+        "\n",
+        "# I can not believe I basically got this one right doing it out of pen and paper! I got H = 1.9538 (I rounded a few things up for ease)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
         "# I had to look up the python code so I never have to do that again by hand\n",
-        "# because variables are strings... I have to either change them over to integers or\n",
-        "def shan_ent(probs):\n",
-        "    return -sum(p * math.log2(p) for \n",
-        "p in probs if p > 0)"
+        "# because variables are strings... I have to either change them over to integers or something\n",
+        "p6 = -sum(p * math.log2(p) for p in q6a.values() if p > 0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "-26.36452797660028"
+              "1.9139037172696836"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "test = shan_ent(q6a)\n",
-        "test"
+        "p6"
       ]
     },
     {
@@ -647,15 +667,6 @@
       "metadata": {},
       "source": [
         "Check the value of `p6`."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 37,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "p6 = test"
       ]
     },
     {
@@ -673,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -703,33 +714,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# YOUR CHANGES HERE\n",
-        "\n",
-        "p7 = ..."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "np.float64(1.9407546870999999)"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "p7"
+        "stdev = np.std(q7)\n",
+        "avg = np.mean(q7)\n",
+        "avg"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# YOUR CHANGES HERE\n",
+        "\n",
+        "p7 = avg"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.9407546870999999\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(p7)"
       ]
     },
     {
@@ -747,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -786,13 +816,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p8 = ..."
+        "# you need to set the degree of freedom for sample std\n",
+        "standard = np.std(q8, ddof=1)\n",
+        "p8 = standard"
       ]
     },
     {
@@ -804,16 +835,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "np.float64(3.1793252926677353)"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 68,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -836,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -848,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -858,7 +889,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# YOUR CHANGES HERE\u001b[39;00m\n\u001b[32m      2\u001b[39m p9a = [\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m p9b = \u001b[43mq9\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp9a\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#p9 = np.quantile(q9, 25)\u001b[39;00m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[71]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# YOUR CHANGES HERE\u001b[39;00m\n\u001b[32m      2\u001b[39m p9a = [\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m p9b = \u001b[43mq9\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp9a\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#p9 = np.quantile(q9b, 25)\u001b[39;00m\n",
             "\u001b[31mTypeError\u001b[39m: q9() takes 0 positional arguments but 1 was given"
           ]
         }
@@ -867,7 +898,7 @@
         "# YOUR CHANGES HERE\n",
         "p9a = [0,1]\n",
         "p9b = q9(p9a)\n",
-        "#p9 = np.quantile(q9, 25)"
+        "#p9 = np.quantile(q9b, 25)"
       ]
     },
     {
@@ -1017,7 +1048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1055,27 +1086,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p12 = ..."
+        "p12 = np.var(q12)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "np.float64(6.341830149403737)"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 74,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1298,25 +1329,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "IndentationError",
-          "evalue": "unindent does not match any outer indentation level (<string>, line 6)",
-          "output_type": "error",
-          "traceback": [
-            "  \u001b[36mFile \u001b[39m\u001b[32m<string>:6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31melse:\u001b[39m\n         ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unindent does not match any outer indentation level\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p15():\n",
-        "     if \n",
+        "     if random.random() < 0.1:\n",
         "        return 'You win!'\n",
-        "    else:\n",
+        "     else:\n",
         "        return 'Sorry'"
       ]
     },
@@ -1329,16 +1351,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[None, None, None, None, None, None, None, None, None, None]"
+              "['Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry']"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
