--- a/homework.ipynb
+++ b/homework.ipynb
@@ -935,13 +935,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p10 = 0.7"
+        "p10 = 0.3"
       ]
     },
     {
@@ -953,16 +953,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.7"
+              "0.3"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1329,14 +1329,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 81,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p15():\n",
-        "     if random.random() < 0.1:\n",
+        "     if random.random() <= 0.01:\n",
         "        return 'You win!'\n",
         "     else:\n",
         "        return 'Sorry'"
@@ -1351,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
@@ -1369,7 +1369,7 @@
               " 'Sorry']"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1548,27 +1548,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 96,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = ..."
+        "p18 = 2.6363"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "2.6363"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
