--- a/homework.ipynb
+++ b/homework.ipynb
@@ -58,11 +58,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "K3bsVQYk6PK3",
-        "outputId": "b441f2d0-d2e5-4d4e-92f2-795a3fcb42aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K3bsVQYk6PK3",
+        "outputId": "b441f2d0-d2e5-4d4e-92f2-795a3fcb42aa"
       },
       "outputs": [
         {
@@ -179,11 +179,11 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "3kxrw7x56PK4",
-        "outputId": "b7ffb914-35fd-498d-dfdb-acbb0e1a116d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3kxrw7x56PK4",
+        "outputId": "b7ffb914-35fd-498d-dfdb-acbb0e1a116d"
       },
       "outputs": [
         {
@@ -250,28 +250,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
-        "id": "R1OsinCa6PK5",
-        "outputId": "2316667d-83fc-46ab-edee-935ab5259e41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R1OsinCa6PK5",
+        "outputId": "e4e04a2c-aaf6-46ff-ded2-689e6c6c8f0b"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.0799999999999996"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test\n"
+          ]
         }
       ],
       "source": [
-        "p2"
+        "p2\n",
+        "print(\"test\")"
       ]
     },
     {
@@ -289,12 +287,12 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "3Wz6c5fR6PK5",
-        "outputId": "94e25464-3e83-4ec7-dfae-21b6a71a4b7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 339
-        }
+        },
+        "id": "3Wz6c5fR6PK5",
+        "outputId": "94e25464-3e83-4ec7-dfae-21b6a71a4b7e"
       },
       "outputs": [
         {
