--- a/homework.ipynb
+++ b/homework.ipynb
@@ -56,13 +56,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3bsVQYk6PK3",
-        "outputId": "b441f2d0-d2e5-4d4e-92f2-795a3fcb42aa"
+        "outputId": "d04f09da-dbe3-4835-93e8-ed5efe54f3e1"
       },
       "outputs": [
         {
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "id": "5yUvvDLwlSVb"
       },
@@ -618,10 +618,10 @@
       "execution_count": 24,
       "metadata": {
         "id": "1dCi9zuI6PK6",
-        "outputId": "50caea87-ed48-4027-e9bc-b66c2929630b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "50caea87-ed48-4027-e9bc-b66c2929630b"
       },
       "outputs": [
         {
@@ -681,10 +681,10 @@
       "execution_count": 27,
       "metadata": {
         "id": "eUhj85oX6PK6",
-        "outputId": "0e33c650-afd3-43cc-91cd-910dc85777c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0e33c650-afd3-43cc-91cd-910dc85777c2"
       },
       "outputs": [
         {
@@ -707,10 +707,10 @@
       "execution_count": 28,
       "metadata": {
         "id": "6Jtx7dOv6PK6",
-        "outputId": "9671e249-d1e3-4821-c020-78c8ee35c25d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9671e249-d1e3-4821-c020-78c8ee35c25d"
       },
       "outputs": [
         {
@@ -774,10 +774,10 @@
       "execution_count": 31,
       "metadata": {
         "id": "uXDjaw986PK6",
-        "outputId": "36de327f-4426-441d-d6e9-51621cedc57e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "36de327f-4426-441d-d6e9-51621cedc57e"
       },
       "outputs": [
         {
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "9PFADoUe6PK9"
       },
@@ -1083,25 +1083,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "6EViY4XB6PK9"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "p9a = [0,1]\n",
-        "p9b = q9(p9a)\n",
-        "#p9 = np.quantile(q9b, 25)"
+        "\n",
+        "p9 = 2.75"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
-        "id": "yDyeuiIB6PK-"
+        "id": "yDyeuiIB6PK-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c2b0cefd-0fb4-497b-8c06-33217e7d3aa3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ],
       "source": [
         "p9"
       ]
@@ -1227,7 +1241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "rcpWHfOF6PK_"
       },
@@ -1269,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "APt-2G8a6PK_"
       },
@@ -1277,16 +1291,31 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p12 = np.var(q12)"
+        "p12 = 2.5**2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "iYze_FdC6PK_"
+        "id": "iYze_FdC6PK_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02617c97-0de1-47e4-b82d-d672a922571b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
         "p12"
       ]
@@ -1304,16 +1333,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "KP5B0Cjd6PK_"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
+        "# the CDF = [f(x) = P(X <= x)] ** ,ust always be between 0-1\n",
+        "# the uniform has variables a and b (uniform meaning equal, consistent)\n",
         "\n",
         "def p13(x):\n",
-        "    ..."
+        "  if x < 0.5:\n",
+        "    return 0\n",
+        "  if x < 1.5:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return (x + 0.5)/2\n",
+        ""
       ]
     },
     {
@@ -1327,77 +1364,182 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "P4n-2RYX6PK_"
+        "id": "P4n-2RYX6PK_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a449786-adb3-4a82-e7a2-14c764817edb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ],
       "source": [
         "p13(-1.0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "CkQeq9MA6PLA"
+        "id": "CkQeq9MA6PLA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c25dcca1-468a-480a-a19e-252658bd4fe0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ],
       "source": [
         "p13(-0.5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "nnPNwnx_6PLA"
+        "id": "nnPNwnx_6PLA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6807cbea-cfe7-4f17-b969-77078d51139f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ],
       "source": [
         "p13(0.0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "-k9ztmWN6PLA"
+        "id": "-k9ztmWN6PLA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83df2355-abb6-403d-f67e-0459ee2ff21c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ],
       "source": [
         "p13(0.5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "fAudA3lu6PLA"
+        "id": "fAudA3lu6PLA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7ca81050-fc99-49c8-95a1-154447d95d83"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ],
       "source": [
         "p13(1.0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "8r6Dvrg26PLA"
+        "id": "8r6Dvrg26PLA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "685d34a9-1944-49bb-e4da-77716ae6dd99"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
       "source": [
         "p13(1.5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "kCGPZdLq6PLA"
+        "id": "kCGPZdLq6PLA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7593e052-3f07-48cb-af58-135285afab00"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
         "p13(2.0)"
       ]
@@ -1416,7 +1558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "XPZE3LTI6PLA"
       },
@@ -1448,7 +1590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "San4HvP36PLA"
       },
@@ -1480,16 +1622,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nC9Ig3p16PLB"
-      },
-      "outputs": [],
       "source": [
-        "# YOUR CHANGES HERE\n",
-        "\n",
-        "p14 = ..."
-      ]
+        "p14 = np.mean(q14a) + np.mean(q14b)"
+      ],
+      "metadata": {
+        "id": "tx7zCaq4UD3q"
+      },
+      "execution_count": 31,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1502,11 +1642,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "ToLFZXw_6PLB"
+        "id": "ToLFZXw_6PLB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed235a46-ba5b-4bb6-b7a4-b24530eb3326"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(2.6611238258)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ],
       "source": [
         "p14"
       ]
@@ -1894,6 +2049,7 @@
   ],
   "metadata": {
     "colab": {
+      "toc_visible": true,
       "provenance": []
     },
     "kernelspec": {
