--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1866,11 +1866,11 @@
         "X"
       ],
       "metadata": {
-        "id": "R27iDS4ihpVF",
-        "outputId": "f60a334e-1a26-4615-c7f6-993e784c2a59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R27iDS4ihpVF",
+        "outputId": "f60a334e-1a26-4615-c7f6-993e784c2a59"
       },
       "execution_count": 69,
       "outputs": [
@@ -2184,7 +2184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 105,
       "metadata": {
         "id": "Ckk7ndAH6PLD"
       },
@@ -2192,33 +2192,18 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = np.mean(y)"
+        "q18 = np.mean(y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 106,
       "metadata": {
-        "id": "BqL8uyLz6PLD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d1bc4ab7-c2f9-4abe-e93d-fb35b7fdb572"
+        "id": "BqL8uyLz6PLD"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "np.float64(2.765665244391581)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 104
-        }
-      ],
+      "outputs": [],
       "source": [
-        "p18"
+        "p18 = 2.75"
       ]
     },
     {
@@ -2542,11 +2527,11 @@
         "q20yy"
       ],
       "metadata": {
-        "id": "rllWdZnaZCPi",
-        "outputId": "a2335b6c-5de5-4a83-829c-9ec24d1c01bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rllWdZnaZCPi",
+        "outputId": "a2335b6c-5de5-4a83-829c-9ec24d1c01bb"
       },
       "execution_count": 45,
       "outputs": [
@@ -2630,12 +2615,12 @@
         "model.fit(q20XX, q20y)"
       ],
       "metadata": {
-        "id": "efC6D2b4beXI",
-        "outputId": "323e5027-13b1-452b-e27f-5a344f77ca0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "efC6D2b4beXI",
+        "outputId": "323e5027-13b1-452b-e27f-5a344f77ca0b"
       },
       "execution_count": 54,
       "outputs": [
