--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2087,7 +2087,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 107,
       "metadata": {
         "id": "KkY7kX546PLC"
       },
@@ -2095,33 +2095,18 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "y = 3 * X + 1\n",
-        "p17 = np.mean(y)"
+        "q17 = np.mean(y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 108,
       "metadata": {
-        "id": "hgQAZwh26PLC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "08356e00-863d-45d4-f4e3-7d1bdb633ec7"
+        "id": "hgQAZwh26PLC"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "np.float64(2.467256712473209)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 72
-        }
-      ],
+      "outputs": [],
       "source": [
-        "p17"
+        "p17 = 2.5"
       ]
     },
     {
